--- a/estilos/styles.css
+++ b/estilos/styles.css
@@ -10,6 +10,7 @@ body{
 main{
     background-color: cornsilk;
     height: 500px;
+    width: 500px;
     margin: auto;
     padding: 10px;
     box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.712) ;
